--- a/Appfolder/www/Info.html
+++ b/Appfolder/www/Info.html
@@ -31,4 +31,10 @@
             <figcaption>Estudiante de ingeniería de control</figcaption>
         </div>
     </div>
+    <div>
+        <h1>En el siguiente repositorio podrás encontrar todo el código empleado para desplegar la aplicación</h1>
+        <a href="https://github.com/SimonPGM/AccidentesViales">
+            <img src="https://p.kindpng.com/picc/s/128-1280187_github-logo-png-github-transparent-png.png">
+        </a>
+    </div>
 </div>
