before starting modeling visualization

--- a/Appfolder/www/Info.html
+++ b/Appfolder/www/Info.html
@@ -6,29 +6,57 @@
             <a href="https://github.com/jgaleanoa">
                 <img src="https://avatars.githubusercontent.com/u/82337913?v=4" class="gitphoto">
             </a>
-            <figcaption>Juan José Galeano Arenas</figcaption>
-            <figcaption>Estudiante de estadística</figcaption>
+            <div class="middle">
+                <div class="txt">
+                    <p>Juan José Galeano Arenas</p>
+                    <br>
+                    <p>Estudiante de estadística</p>
+                </div>
+            </div>
+            <!-- <figcaption>Juan José Galeano Arenas</figcaption>
+            <figcaption>Estudiante de estadística</figcaption> -->
         </div>
         <div class="column">
             <a href="https://github.com/SebastianGaviria36">
                 <img src="https://avatars.githubusercontent.com/u/82337893?v=4" class="gitphoto">
             </a>
-            <figcaption>Sebastián Gaviria Sánchez</figcaption>
-            <figcaption>Estudiante de estadística</figcaption>
+            <!-- <div class="middle">
+                <div class="txt">
+                    <p>Sebastián Gaviria Sánchez</p>
+                    <br>
+                    <p>Estudiante de estadística</p>
+                </div>
+            </div> -->
+            <!-- <figcaption>Sebastián Gaviria Sánchez</figcaption>
+            <figcaption>Estudiante de estadística</figcaption> -->
         </div>
         <div class="column">
             <a href="https://github.com/SimonPGM">
                 <img src="https://avatars.githubusercontent.com/u/71856010?v=4" class="gitphoto">
             </a>
-            <figcaption>Simón Pedro Galeano Muñoz</figcaption>
-            <figcaption>Estudiante de estadística</figcaption>
+            <!-- <div class="middle">
+                <div class="txt">
+                    <p>Simón Pedro Galeano Muñoz</p>
+                    <br>
+                    <p>Estudiante de estadística</p>
+                </div>
+            </div> -->
+            <!-- <figcaption>Simón Pedro Galeano Muñoz</figcaption>
+            <figcaption>Estudiante de estadística</figcaption> -->
         </div>
         <div class="column">
             <a href="https://github.com/vriosv79">
                 <img src="https://avatars.githubusercontent.com/u/58831165?v=4" class="gitphoto">
             </a>
-            <figcaption>Veronica Riós Vargas</figcaption>
-            <figcaption>Estudiante de ingeniería de control</figcaption>
+            <!-- <div class="middle">
+                <div class="txt">
+                    <p>Veronica Riós Vargas</p>
+                    <br>
+                    <p>Estudiante de ingeniería de control</p>
+                </div>
+            </div> -->
+            <!-- <figcaption>Veronica Riós Vargas</figcaption>
+            <figcaption>Estudiante de ingeniería de control</figcaption> -->
         </div>
     </div>
     <div>
