--- a/Appfolder/www/Info.html
+++ b/Appfolder/www/Info.html
@@ -3,65 +3,53 @@
     <p>El trabajo anterior fue ajustado por</p>
     <div class="row">
         <div class="column">
-            <a href="https://github.com/jgaleanoa">
+            <a href="https://github.com/jgaleanoa" target="_blank">
                 <img src="https://avatars.githubusercontent.com/u/82337913?v=4" class="gitphoto">
             </a>
-            <div class="middle">
-                <div class="txt">
-                    <p>Juan José Galeano Arenas</p>
-                    <br>
-                    <p>Estudiante de estadística</p>
-                </div>
+            <div class="oculto">
+                <p>Juan José Galeano Arenas</p>
+                <p>Estudiante de estadística</p>
             </div>
             <!-- <figcaption>Juan José Galeano Arenas</figcaption>
             <figcaption>Estudiante de estadística</figcaption> -->
         </div>
         <div class="column">
-            <a href="https://github.com/SebastianGaviria36">
+            <a href="https://github.com/SebastianGaviria36" target="_blank">
                 <img src="https://avatars.githubusercontent.com/u/82337893?v=4" class="gitphoto">
             </a>
-            <!-- <div class="middle">
-                <div class="txt">
-                    <p>Sebastián Gaviria Sánchez</p>
-                    <br>
-                    <p>Estudiante de estadística</p>
-                </div>
-            </div> -->
+            <div class="oculto">
+                <p>Sebastián Gaviria Sánchez</p>
+                <p>Estudiante de estadística</p>
+            </div>
             <!-- <figcaption>Sebastián Gaviria Sánchez</figcaption>
             <figcaption>Estudiante de estadística</figcaption> -->
         </div>
         <div class="column">
-            <a href="https://github.com/SimonPGM">
+            <a href="https://github.com/SimonPGM" target="_blank">
                 <img src="https://avatars.githubusercontent.com/u/71856010?v=4" class="gitphoto">
             </a>
-            <!-- <div class="middle">
-                <div class="txt">
-                    <p>Simón Pedro Galeano Muñoz</p>
-                    <br>
-                    <p>Estudiante de estadística</p>
-                </div>
-            </div> -->
-            <!-- <figcaption>Simón Pedro Galeano Muñoz</figcaption>
+            <div class="oculto">
+                <p>Simón Pedro Galeano Muñoz</p>
+                <p>Estudiante de estadística</p>
+            </div>
+            <!-- <figcaption></figcaption>
             <figcaption>Estudiante de estadística</figcaption> -->
         </div>
         <div class="column">
-            <a href="https://github.com/vriosv79">
+            <a href="https://github.com/vriosv79" target="_blank">
                 <img src="https://avatars.githubusercontent.com/u/58831165?v=4" class="gitphoto">
             </a>
-            <!-- <div class="middle">
-                <div class="txt">
-                    <p>Veronica Riós Vargas</p>
-                    <br>
-                    <p>Estudiante de ingeniería de control</p>
-                </div>
-            </div> -->
+            <div class="oculto">
+                <p>Veronica Riós Vargas</p>
+                <p>Estudiante de ingeniería de control</p>
+            </div>
             <!-- <figcaption>Veronica Riós Vargas</figcaption>
             <figcaption>Estudiante de ingeniería de control</figcaption> -->
         </div>
     </div>
     <div>
         <h1>En el siguiente repositorio podrás encontrar todo el código empleado para desplegar la aplicación</h1>
-        <a href="https://github.com/SimonPGM/AccidentesViales">
+        <a href="https://github.com/SimonPGM/AccidentesViales" target="_blank">
             <img src="https://p.kindpng.com/picc/s/128-1280187_github-logo-png-github-transparent-png.png">
         </a>
     </div>
