almost finished styling

--- a/Appfolder/www/Info.html
+++ b/Appfolder/www/Info.html
@@ -1,6 +1,5 @@
-<h1>Información del proyecto</h1>
+<h1 style="text-align: center; color: #03fcb1;">¡Conócenos!</h1>
 <div>
-    <p>El trabajo anterior fue ajustado por</p>
     <div class="row">
         <div class="column">
             <a href="https://github.com/jgaleanoa" target="_blank">
@@ -47,10 +46,18 @@
             <figcaption>Estudiante de ingeniería de control</figcaption> -->
         </div>
     </div>
-    <div>
-        <h1>En el siguiente repositorio podrás encontrar todo el código empleado para desplegar la aplicación</h1>
-        <a href="https://github.com/SimonPGM/AccidentesViales" target="_blank">
-            <img src="https://p.kindpng.com/picc/s/128-1280187_github-logo-png-github-transparent-png.png">
-        </a>
+    <div class="frow">
+        <div class="fcol">
+            <h1 style="font-size: 200%; text-align: center;">¡En el siguiente repositorio podrás encontrar todo el código empleado para desplegar la aplicación!</h1>
+            <a href="https://github.com/SimonPGM/AccidentesViales" target="_blank">
+                <img src="https://p.kindpng.com/picc/s/128-1280187_github-logo-png-github-transparent-png.png">
+            </a>
+        </div>
+        <div class="fcol">
+            <h1 style="font-size: 200%; text-align: center;">¡En el siguiente enlace podrás encontrar el informe técnico!</h1>
+            <a href="https://github.com/SimonPGM/AccidentesViales" target="_blank">
+                <img src="https://prints.ultracoloringpages.com/36d99a7d4c51307f9cd6c7504d9d27b1.png" width="50%">
+            </a>
+        </div>
     </div>
 </div>
