--- a/Appfolder/www/header.html
+++ b/Appfolder/www/header.html
@@ -1,8 +1,8 @@
-</head>
-<body>
-    <header class="Header">
-        <section>
-            <img src="https://www.argentina.gob.ar/sites/default/files/vinetas_justicia_cerca_04_choque_mi_auto.png" alt="logo" class="logopic">
-            <div class="caption">Accidentalidad en Medellín</div>
-        </section>
-    </header>
+<header class="Header">
+    <section>
+        <img src="logo.png" alt="logo" class="logopic">
+        <div class="caption">
+            <b>Accidentalidad en Medellín</b>
+        </div>
+    </section>
+</header>
