--- a/Appfolder/www/Info.html
+++ b/Appfolder/www/Info.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center; color: #03fcb1;">¡Conócenos!</h1>
+<h1 style="text-align: center; color: #03fcb1; font-size: 1000%;">¡Conócenos!</h1>
 <div>
     <div class="row">
         <div class="column">
@@ -9,8 +9,6 @@
                 <p>Juan José Galeano Arenas</p>
                 <p>Estudiante de estadística</p>
             </div>
-            <!-- <figcaption>Juan José Galeano Arenas</figcaption>
-            <figcaption>Estudiante de estadística</figcaption> -->
         </div>
         <div class="column">
             <a href="https://github.com/SebastianGaviria36" target="_blank">
@@ -20,8 +18,6 @@
                 <p>Sebastián Gaviria Sánchez</p>
                 <p>Estudiante de estadística</p>
             </div>
-            <!-- <figcaption>Sebastián Gaviria Sánchez</figcaption>
-            <figcaption>Estudiante de estadística</figcaption> -->
         </div>
         <div class="column">
             <a href="https://github.com/SimonPGM" target="_blank">
@@ -31,8 +27,6 @@
                 <p>Simón Pedro Galeano Muñoz</p>
                 <p>Estudiante de estadística</p>
             </div>
-            <!-- <figcaption></figcaption>
-            <figcaption>Estudiante de estadística</figcaption> -->
         </div>
         <div class="column">
             <a href="https://github.com/vriosv79" target="_blank">
@@ -42,22 +36,30 @@
                 <p>Veronica Riós Vargas</p>
                 <p>Estudiante de ingeniería de control</p>
             </div>
-            <!-- <figcaption>Veronica Riós Vargas</figcaption>
-            <figcaption>Estudiante de ingeniería de control</figcaption> -->
         </div>
     </div>
     <div class="frow">
         <div class="fcol">
-            <h1 style="font-size: 200%; text-align: center;">¡En el siguiente repositorio podrás encontrar todo el código empleado para desplegar la aplicación!</h1>
-            <a href="https://github.com/SimonPGM/AccidentesViales" target="_blank">
-                <img src="https://p.kindpng.com/picc/s/128-1280187_github-logo-png-github-transparent-png.png">
-            </a>
+            <div>
+                <h1 style="font-size: 200%; text-align: center;">¡En el siguiente repositorio podrás encontrar todo el
+                    código empleado para desplegar la aplicación!</h1>
+            </div>
+            <div class="fimgs">
+                <a href="https://github.com/SimonPGM/AccidentesViales" target="_blank">
+                    <img src="github.png">
+                </a>
+            </div>
         </div>
         <div class="fcol">
-            <h1 style="font-size: 200%; text-align: center;">¡En el siguiente enlace podrás encontrar el informe técnico!</h1>
-            <a href="https://github.com/SimonPGM/AccidentesViales" target="_blank">
-                <img src="https://prints.ultracoloringpages.com/36d99a7d4c51307f9cd6c7504d9d27b1.png" width="50%">
-            </a>
+            <div>
+                <h1 style="font-size: 200%; text-align: center;">¡En el siguiente enlace podrás encontrar el informe
+                    técnico!</h1>
+            </div>
+            <div class="fimgs">
+                <a href="https://github.com/SimonPGM/AccidentesViales" target="_blank">
+                    <img src="statistics.png">
+                </a>
+            </div>
         </div>
     </div>
 </div>
