--- a/Appfolder/www/Intro.html
+++ b/Appfolder/www/Intro.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introducción</title>
-</head>
-<body>
-    
-</body>
-</html>
+<div class="into">
+    <p class="introp" style="font-size: 150%;">
+        <br>
+        Medellín ocupa el primer lugar de mayor accidentalidad en el país, trayendo con esto problemáticas sociales y
+        ambientales. Teniendo en cuenta lo anterior se desarrolló esta página web donde se encuentra información
+        relativa a
+        la accidentalidad en la ciudad entre los años 2014 y 2020, que pretende, mediante un modelo predictivo,
+        describir y
+        anticipar la cantidad y tipo de accidentes que se producen en la ciudad. Además, se encuentra un agrupamiento de
+        los
+        barrios donde se definen las zonas con mayor y menor riesgo de accidentalidad.
+    </p>
+</div>
+<div class="video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Pg_hLw6kVEg" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen poster="logo.png"></iframe>
+</div>
