finishing trivial stuff

--- a/Appfolder/www/Info.html
+++ b/Appfolder/www/Info.html
@@ -56,7 +56,7 @@
                     técnico!</h1>
             </div>
             <div class="fimgs">
-                <a href="https://github.com/SimonPGM/AccidentesViales" target="_blank">
+                <a href="https://simonpgm.github.io/Informe.html" target="_blank">
                     <img src="statistics.png">
                 </a>
             </div>
