--- a/Appfolder/www/sidemap.html
+++ b/Appfolder/www/sidemap.html
@@ -1,6 +1,6 @@
 <h1 style="color: #03fcb1; font-size: 250%; text-align: center;"><b>Agrupamiento de los mapas por el riesgo de
         accidentalidad</b></h1> <br>
-<p style="font-size: 175%;">En la parte izquierda de esta sección encontrarás un mapa con la división de Medellín en
+<p style="font-size: 175%;">En la parte derecha de esta sección encontrarás un mapa con la división de Medellín en
     sus barrios
     coloreados según la probabilidad de accidentarse allí. <br>
     El mapa es interactivo, así que si quieres conocer en qué barrios es más probable accidentarse y cuantos
