re finsghing app

--- a/Appfolder/www/Intro.html
+++ b/Appfolder/www/Intro.html
@@ -2,7 +2,7 @@
     <p class="introp" style="font-size: 150%;">
         <br>
         Medellín ocupa el primer lugar de mayor accidentalidad en el país, trayendo con esto problemáticas sociales y
-        ambientales. Teniendo en cuenta lo anterior se desarrolló esta página web donde se encuentra información
+        ambientales. Teniendo en cuenta lo anterior se desarrolló esta aplicación donde se encuentra información
         relativa a
         la accidentalidad en la ciudad entre los años 2014 y 2020, que pretende, mediante un modelo predictivo,
         describir y
