--- a/Appfolder/www/tts.html
+++ b/Appfolder/www/tts.html
@@ -1,6 +1,7 @@
 <div class="ttside">
     <div>
-        <h1 style="color: #03fcb1; font-size: 250%; text-align: center;"><b>Desviaciones del modelo en el año 2021</b>
+        <h1 style="color: #03fcb1; font-size: 250%; text-align: center;"><b>Desviaciones de las predicciones en el
+                periodo 2020</b>
         </h1> <br>
     </div>
     <div>
@@ -9,7 +10,8 @@
             aisladas en sus recintos, lo que disminuyó notablemente la cantidad de individuos en las calles y por ende
             el número total de accidentes automovilísticos también. Por esto, resulta de interés observar las
             desviaciones
-            del modelo con respecto a la baja del número de accidentes ocasionada por la coyuntura debida al SARS-CoV-2.
+            de las predicciones con respecto a la realidad, dada la baja del número de accidentes ocasionada por la
+            coyuntura debida al SARS-CoV-2.
         </p>
     </div>
     <div class="imgtt">
